Quick fix for sorting dropdown spacing

--- a/assets/scss/partials/_crawler.scss
+++ b/assets/scss/partials/_crawler.scss
@@ -92,11 +92,11 @@
               }
               
               .sort-by {
-                margin-right: -20px;
+              margin-right: -10px;
               } 
               
               .results-per-page {
-                margin-left: 0px;
+                margin-left: 10px;
               }
               
                .tag-filter {
